# pressure_chicken

./: .gitignore  ACTION_PLAN.md  CLAUDE.md  README.md  augment_dataset.py  calibration.py  diag_pipeline.py  diag_rms.py  extract_frames.py  label_keypoints.py  main.py  new_way.md  old_main.py  pyproject.toml  requirements.txt  train.py  videocapture.py
.agents/: Pressure_chicken_인수인계.md
.agents/rules/: designer.md  doc.md  fixer.md  global.md  maker.md  planner.md
config/: config_guide.md.resolved  store_config.json
core/: data_logger.py  detector.py  flow_target.py  frame_processor.py  frequency_filter.py  optical_flow.py  stabilizer.py  state_machine.py
dataset/: README.dataset.txt  data.yaml  data_aug.yaml  dataset.yaml
dataset/origianl/: README.roboflow.txt  data.yaml
dataset/origianl/train/labels/: 20260304_135910-mp4_20260310_164008-080_jpg.rf.90747800597d5742ca3721e4c73b90b4.txt  20260304_135910-mp4_20260310_164018-142_jpg.rf.1b3084a783e0a2a7c0c0f17d67455be2.txt  20260304_135910-mp4_20260310_164028-132_jpg.rf.4d54547a77c2a7ab79f7f376b220c9d8.txt  (+75 more)
dataset/original/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/pressure_chicken.v2i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
logs/: session_20260420_200101.jsonl  session_20260420_201005.jsonl
sources/: camera_utils.py  video_source.py
tests/: bench_optical_flow.py  bench_optical_flow_targeted.py  bench_stabilizer.py  compare_optical_flow.py  compare_optical_flow_targeted.py  compare_stabilizer.py
ui/: ui_display.py  ui_display_backup.py
(+363 files in other folders)
