[project]
name = "pressure-chicken"
version = "0.1.0"
description = "압력밥솥 타이머 — 비전 기반 주방 모니터링 시스템"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

# PyTorch CUDA 12.4 인덱스 — RTX 3060 Ti (드라이버 577, CUDA 12.9 호환)
[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
